syntax = "proto3";
import "google/protobuf/empty.proto";

option csharp_namespace = "Team8.Contracts.Room.Server";

package Room;

service RoomService {
  rpc CreateRoom (CreateRoomModel) returns (RoomId);
  rpc GetRooms (google.protobuf.Empty) returns (RoomsModel);
  rpc ConnectRoom (ConnectRoomModel) returns (RoomModel);
  rpc DisconnectRoom (RoomId) returns (RequestModel);
  rpc ToggleReadiness (RoomId) returns (RequestModel);
  rpc StartBattle (RoomId) returns (RequestModel);
}

message CreateRoomModel {
  string title = 1;
  string pass = 2;
}

message RoomsModel {
  repeated RoomModel models = 1;
}

message RoomModel {
  int32 id = 1;
  string title = 2;
  int32 status = 3;
  string nameCurrentMap = 4;
  int32 currentRound = 5;
}

message ConnectRoomModel {
  int32 id = 1;
  string pass = 2;
}

message RoomId {
  int32 id = 1;
}

message RequestModel{
  bool ok = 1;
  optional string message = 2;
}